Fix various spacing on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -147,10 +147,19 @@ img {
     .row{
         flex-direction: column;
         align-items: center;
+        gap: 1.5rem;
     }
     
     .steps .col, .lessons .col, .why-us .col{
         width: 100%;
         margin-top: 3rem;
+    }
+
+    h1{
+        margin-bottom: 2rem;
+    }
+
+    h2{
+        margin-bottom: 0;
     }
  }
